# summa-analysis

./: Cargo.toml  README.md
circuit/halo2-solidity-verifier/: Cargo.toml
circuit/solvency/zk_prover/: Cargo.toml
korrekt/: Cargo.toml
korrekt/src/: main.rs
korrekt/src/circuit_analyzer/: abstract_expr.rs  analyzable.rs  analyzer.rs  halo2_proofs_libs.rs
korrekt/src/sample_circuits/: mod.rs
korrekt/src/sample_circuits/summa/: mod.rs
korrekt/src/sample_circuits/summa/lookup_circuits/: mod.rs  multiple_lookups_summa.rs
src/: codegen.rs  main.rs
