[package]
name = "summa-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
korrekt = { path = "../halo2-analyzer/korrekt", default-features = false, features = ["use_summa_halo2_proofs"] }
log = "0.4.20"
num = "0.4.1"
