[package]
name = "summa-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
korrekt = { git = "https://github.com/zeroqn/halo2-analyzer", default-features = false, features = ["use_summa_halo2_proofs"], branch = "feat-summa-fork-halo2" }
log = "0.4.20"
num = "0.4.1"
summa-solvency = { path = "./circuit/solvency/zk_prover" }
